--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
     <nav>
       <ul>
         {% for link in site.footer_links %}<li><a href="{{ link.url }}">{{ link.text }}</a></li>{% endfor %}
+        Footer
       </ul>
     </nav>
   </div>
