--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 {% include head.html %}
-
 <body>
 	{% include header.html %}
-	<main>
-		<article>
+	<main >
+		<article id = "b4">
 			{{ content }}
 		</article>
 		{% include footer.html %}
