--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <body>
 	{% include header.html %}
 	<main >
-		<article id = "b4">
+		<article>
 			{{ content }}
 		</article>
 		{% include footer.html %}
