--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,12 @@
-<aside>
-	<div class="container">
-		<nav>
-			<ul class="nav">
-				{% for page in site.pages %} {% if page.title %}
-				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-				<li><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">Home</a></li>
-				<li><a href="{{ page.url | prepend: site.baseurl }}">Work</a></li>
-				<li><a href="{{ page.url | prepend: site.baseurl }}">Contact</a></li>
-				{% endif %} {% endfor %}
-     </ul>
-
-	 </nav>
-	</div>
-</aside>
-
-<header>
+<header id="container">
 	<h1 id="main-header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
-	<h1>Othello Game<h1>
+	<nav>
+    <ul>
+			{% for page in site.pages %}
+		    {% if page.title %}
+		      <li><a href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a></li>
+		    {% endif %}
+		  {% endfor %}
+    </ul>
+  </nav>
 </header>
