--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,6 @@ layout: default
 <time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
 
 <div class="post-content">
-	{{ content ghgghghgghghghg }}
+	{{ content }}
 
 </div>
