--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
+/*
 html {
- margin: auto;
- padding: 0;
- font : normal 100%/1.4 Arial,serif;
- border-top: 0;
+  margin: auto;
+  padding: 0;
+  font: normal 100%/1.4 Arial, serif;
+  border-top: 0;
 }
 
 body {
@@ -10,36 +11,35 @@ body {
   margin-top: 0;
 }
 
-.nav{
+.nav {
   margin-top: 0;
   background-color: #595959;
-  color: #ffffff;
+  color: #fff;
   list-style: none;
   text-align: center;
-  padding: 25px 0 25px 0;
+  padding: 25px 0;
 }
 
-.nav >li{
+.nav > li {
   display: inline-block;
   padding-right: 50px;
-
 }
 
-.nav >li> a {
+.nav > li > a {
   text-decoration: none;
-  color: #ffffff;
+  color: #fff;
 }
+
 .nav > li > a:hover {
   color: #c1c1c1;
 }
 
 .footer {
-
-    padding: 20px 0 20px 0;
-    left: 0;
-    bottom: 0;
-    background-color: #595959;
-    color: white;
-    text-align: center;
-
-  }
+  padding: 20px 0;
+  left: 0;
+  bottom: 0;
+  background-color: #595959;
+  color: white;
+  text-align: center;
+}
+*/
