--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <ul>
 			{% for page in site.pages %}
 		    {% if page.title %}
-		      <li><a href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a></li>
+		      <li class="page-links"><a href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a></li>
 		    {% endif %}
 		  {% endfor %}
     </ul>
