added navigation bar correctly

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header id="container">
 	<h1 id="main-header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
-	<nav>
-    <ul>
-			<li><a href="/">Home</a></li>
+	<nav class="nav">
+    <ul class="nav">
+			<li class="nav"><a href="/">Home</a></li>
 			{% for page in site.pages %}
 		    {% if page.title %}
-		      <li class="page-links"><a href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a></li>
+		      <li class="nav"><a href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a></li>
 		    {% endif %}
 		  {% endfor %}
     </ul>
