cleaned up styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header id="container">
+<header>
 	<h1 id="main-header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
 	<nav class="nav">
     <ul class="nav">
