--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,30 @@
+---
+---
+// importing google fonts via an API
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+
+$header-fonts: "Roboto", "Open Sans", serif;
+$regular-fonts: "Open Sans", "Roboto", serif;
+$font-size: 14px;
+
 html {
   margin: auto;
   padding: 0;
-  font: normal 100%/1.4 Arial, serif;
+  font-family: $regular-fonts;
   border-top: 0;
+  font-size: $font-size;
+}
+
+header h1 {
+  font-size: $font-size * 4;
+}
+
+header h1 a:hover {
+  color: #c1c1c1;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: $header-fonts;
 }
 
 body {
@@ -10,13 +32,17 @@ body {
   margin-top: 0;
 }
 
-.nav {
+header {
   margin-top: 0;
   background-color: #595959;
   color: #fff;
   list-style: none;
   text-align: center;
   padding: 2px 0;
+}
+
+header a {
+  color: #fff;
 }
 
 .nav > li {
