--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,9 @@ h1, h2, h3, h4, h5 {
 
 body {
   background-color: white;
-  margin-top: 0;
+  margin: 0;
+  padding: 2px;
+  height: 100%;
 }
 
 header {
@@ -60,7 +62,7 @@ header a {
 }
 
 .footer {
-  padding: 20px 0;
+  padding: 10px 0;
   left: 0;
   bottom: 0;
   background-color: #595959;
