--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
 $header-fonts: "Roboto", "Open Sans", serif;
-$regular-fonts: "Open Sans", "Roboto", serif;
+$regular-fonts: "Open Sans", "Roboto", Arial;
 $font-size: 14px;
 
 html {
@@ -59,6 +59,7 @@ header a {
 
 .nav > li > a:hover {
   color: #c1c1c1;
+  text-decoration: underline;
 }
 
 .footer {
