--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <nav>
       <ul>
         {% for link in site.footer_links %}<li><a href="{{ link.url }}">{{ link.text }}</a></li>{% endfor %}
-        Created by Sailesh, Eastwood and James.
+        Created by Sailesh, Eastwood and James. Also made possible with the power of Jekyll and PHP.
       </ul>
     </nav>
 </div>
