--- a/css/main.scss
+++ b/css/main.scss
@@ -30,8 +30,10 @@ h1, h2, h3, h4, h5 {
 body {
   background-color: white;
   margin: 0;
-  padding: 2px;
+  // top right bottom
+  padding: 2px 0px 60px;
   height: 100%;
+  margin-bottom: 60px;
 }
 
 header {
@@ -69,10 +71,12 @@ header a {
   background-color: #595959;
   color: white;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  height: 60px;
 }
 
 #container {
   padding: 10px;
   flex: auto;
-  height: 559px;
 }
