--- a/css/main.scss
+++ b/css/main.scss
@@ -63,6 +63,23 @@ header a {
   text-decoration: underline;
 }
 
+.team {
+  text-align: center;
+}
+
+.team > li {
+  display: inline-block;
+  // top right bottom left
+  padding: 50px;
+}
+
+
+#container {
+  padding: 10px;
+  flex: auto;
+}
+
+
 .footer {
   padding: 10px 0;
   left: 0;
@@ -73,9 +90,4 @@ header a {
   position: fixed;
   width: 100%;
   height: 60px;
-}
-
-#container {
-  padding: 10px;
-  flex: auto;
 }
