created our development blog post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
     <nav>
       <ul>
         {% for link in site.footer_links %}<li><a href="{{ link.url }}">{{ link.text }}</a></li>{% endfor %}
-        Created for Group 4, by Group 4. 
+        <p>Created by Group 4.</p>
+        <p>All rights reserved.</p>
       </ul>
     </nav>
 </div>
