i have made few changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,13 @@
 <body>
 	{% include header.html %}
 	<main >
-		<article id="container">
+
+		<div id="container">
 			{{ content }}
-		</article>
+		</div>
 		{% include footer.html %}
 	</main>
+
 </body>
 
 </html>
