--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5 {
 body {
   background-color: white;
   margin: 0;
-  padding: 2px;
+  padding: 0;
   height: 100%;
 }
 
@@ -44,7 +44,10 @@ header {
 }
 
 header a {
-  color: #fff;
+  color: white;
+}
+.cd1{
+  padding: 4px;
 }
 
 .nav > li {
@@ -63,16 +66,31 @@ header a {
 }
 
 .footer {
-  padding: 10px 0;
+  position: fixed;
+  padding-top: 50px;
+  padding: 10px;
   left: 0;
   bottom: 0;
+  width: 100%;
   background-color: #595959;
   color: white;
   text-align: center;
 }
 
+
 #container {
+  background-image: url('../img/b2.jpg');
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  height: 100vh;
+  z-index: -10;
   padding: 10px;
   flex: auto;
-  height: 559px;
+}
+
+#What{
+  padding-bottom: 10px;
 }
