--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
 
   	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 		<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+		<!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway"> -->
 </head>
