--- a/css/main.scss
+++ b/css/main.scss
@@ -32,7 +32,7 @@ body {
   margin: 0;
   padding: 2px 0px 60px;
   height: 100%;
-  margin-bottom: 60px;
+  margin-bottom: 65px;
 }
 
 header {
@@ -83,13 +83,13 @@ header a {
 
 
 #container {
- background-image: url('../img/b2.jpg');
+  //background-image: url('../img/b2.jpg');
   background-size: cover;
   background-position: center center;
   position: relative;
   top: 0;
   bottom: 0;
-  height: 100vh;
+  //height: 100vh;
   //z-index: -10;
   padding: 10px;
   flex: auto;
