added download link

--- a/css/main.scss
+++ b/css/main.scss
@@ -47,7 +47,8 @@ header {
 header a {
   color: white;
 }
-.cd1{
+
+.index-body{
   padding: 4px;
 }
 
@@ -93,8 +94,4 @@ header a {
   //z-index: -10;
   padding: 10px;
   flex: auto;
-}
-
-#What{
-  padding-bottom: 10px;
 }
