--- a/css/main.scss
+++ b/css/main.scss
@@ -67,7 +67,7 @@ header a {
   text-decoration: underline;
 }
 
-.footer {
+/*.footer {
   position: fixed;
   padding-top: 50px;
   padding: 10px;
@@ -81,7 +81,7 @@ header a {
   width: 100%;
   height: 65px;
 }
-
+*/
 
 #container {
   //background-image: url('../img/b2.jpg');
