--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,3 @@
-<div class="footer">
-    <nav>
-      <ul>
-        {% for link in site.footer_links %}<li><a href="{{ link.url }}">{{ link.text }}</a></li>{% endfor %}
-        <p>Created by Group 4.</p>
-        <p>All rights reserved.</p>
-      </ul>
-    </nav>
-</div>
+<footer class="container">
+	
+</footer>
