--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,14 @@
-<header>
-	<h1 id="main-header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
-	<nav class="nav">
-    <ul class="nav">
-			<li class="nav"><a href="/">Home</a></li>
+<header class="container">
+	<h1><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>    
+	<ul class="nav nav-pill nav-fill">
+			<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 			{% for page in site.pages %}
 		    {% if page.title %}
-		      <li class="nav"><a href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a></li>
+		      <li class="nav-item">
+		      	<a class="nav-link" href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a>
+		      </li>
 		    {% endif %}
 		  {% endfor %}
-    </ul>
-  </nav>
+    </ul>  
+
 </header>
