--- a/css/main.scss
+++ b/css/main.scss
@@ -27,71 +27,21 @@ h1, h2, h3, h4, h5 {
   font-family: $header-fonts;
 }
 
-body {
-  background-color: white;
-  margin: 0;
-  padding: 2px 0px 60px;
-  height: 100%;
-  margin-bottom: 65px;
-}
-
-header {
-  margin-top: 0;
-  background-color: #595959;
-  color: #fff;
-  list-style: none;
-  text-align: center;
-  padding: 2px 0;
-}
-
-header a {
-  color: white;
-}
-
-.index-body{
-  padding: 4px;
-}
-
-.nav > li {
-  display: inline-block;
-  padding-right: 50px;
-}
-
-.nav > li > a {
-  text-decoration: none;
-  color: #fff;
-}
-
-.nav > li > a:hover {
-  color: #c1c1c1;
-  text-decoration: underline;
-}
-
-/*.footer {
+.card-footer {
   position: fixed;
-  padding-top: 50px;
-  padding: 10px;
-  left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #595959;
-  color: white;
-  text-align: center;
-  position: fixed;
-  width: 100%;
-  height: 65px;
 }
-*/
 
-#container {
-  //background-image: url('../img/b2.jpg');
-  //background-size: cover;
-  //background-position: center center;
-  //position: relative;
-  //top: 0;
-  //bottom: 0;
-  //height: 100vh;
-  //z-index: -10;
-  padding: 10px;
-  flex: auto;
+.main-header h1{
+  text-align: center;
+}
+
+#introduction {
+  text-align: center;
+}
+
+.othello-image {
+  max-width: 70%;
+  max-height: auto;
 }
