--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="container-fluid">
 	<h2>{{ page.title }}</h2>
 	{{ content }}
 </div>
