moved image from jumbotron

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="container-fluid">
+	    <h1 class="main-header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
     <nav class="navbar navbar-dark bg-dark">
-    	<a class="navbar-brand" href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a>
       	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="true" aria-label="Toggle navigation">
         	<span class="navbar-toggler-icon"></span>
      	</button>
