--- a/css/main.scss
+++ b/css/main.scss
@@ -43,6 +43,11 @@ h1, h2, h3, h4, h5 {
 }
 
 .othello-image {
-  max-width: 70%;
+  max-width: 100%;
   max-height: auto;
+  text-align: center;
+}
+
+.info-section {
+  border-right: 1px solid grey;
 }
