--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,13 @@
-<header class="container-fluid">
+<header class="container-fluid header">
 	    <h1 class="main-header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
-    <nav class="navbar navbar-dark bg-dark">
-      	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="true" aria-label="Toggle navigation">
-        	<span class="navbar-toggler-icon"></span>
-     	</button>
-
-     	<div class="collapse navbar-collapse" id="navbarsExample02">
-     		<ul class="navbar-nav mr-auto">
-     			<li><a href="index.html"></a></li>
-			{% for page in site.pages %}
-		    {% if page.title %}
-		      <li class="nav-item">
-		      	<a class="nav-link" href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a>
-		      </li>
-		    {% endif %}
-		  	{% endfor %}
-     		</ul>
-     	</div>
-
-    </nav>
+			<ul class="nav nav-pills flex-column flex-sm-row">
+		 		<li class="nav-item"><a class="nav-link" href="index.html"></a></li>
+		 		{% for page in site.pages %}
+			    {% if page.title %}
+			      <li class="nav-item">
+			      	<a class="nav-link" href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a>
+			      </li>
+			    {% endif %}
+			  	{% endfor %}
+			</ul>    	
 </header>
