--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
 <header class="container-fluid header">
 	    <h1 class="main-header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
-			<ul class="nav nav-pills flex-column flex-sm-row">
-		 		<li class="nav-item"><a class="nav-link" href="index.html"></a></li>
+			<ul class="nav nav-tabs justify-content-center">
 		 		{% for page in site.pages %}
 			    {% if page.title %}
 			      <li class="nav-item">
