--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 
-<h1 class="post-title">{{ page.title }}</h1>
-<time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
+<div class="container-fluid">
+	<h1 class="post-title">{{ page.title }}</h1>
+	<time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
 
-<div class="post-content">
-	{{ content }}
+	<div class="post-content">
+		{{ content }}
+	</div>
+
 </div>
