--- a/css/main.scss
+++ b/css/main.scss
@@ -7,12 +7,30 @@ $header-fonts: "Roboto", "Open Sans", serif;
 $regular-fonts: "Open Sans", "Roboto", Arial;
 $font-size: 14px;
 
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+
+
 html {
   margin: auto;
   padding: 0;
   font-family: $regular-fonts;
   border-top: 0;
   font-size: $font-size;
+  position: relative;
+  min-height: 100%;
 }
 
 header h1 {
